kube-infra/kustomize/ci-cd/cdevents/envs/prod/mongo-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-express-deployment
  labels:
    app: mongodb-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-express
  template:
    metadata:
      labels:
        app: mongodb-express
    spec:
      containers:
        - name: mongodb-express
          image: mongo-express:1.0.0-alpha.4
          ports:
            - containerPort: 8081
---
