kube-infra/kustomize/ci-cd/cdevents/envs/prod/mongo-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-express-service
  namespace: mongodb-namespace
spec:
  selector:
    app: mongodb-express
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
---
